Updates package.json engines.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "stock-tweets-app-server",
   "version": "0.1.0",
-  "engines": ">10.0.0",
+  "engines": {
+    "node": ">10.0.0"
+  },
   "private": true,
   "scripts": {
     "start": "cd server && node ./bin/www",
