--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   },
   "private": true,
   "scripts": {
-    "start": "cd server && node ./bin/www",
+    "server": "cd server && node ./bin/www",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postBuild": "cd client/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
-  "dependencies": {
+  "dependencies": {   
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -22,5 +24,8 @@
     "type": "git",
     "url": "https://github.com/Scumworth/stock-tweets-app.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "concurrently": "^5.2.0"
+  }
 }
